# python-fastapi-graphql

./: .pre-commit-config.yaml  pyproject.toml  readme.md  requirements.txt
src/python_fastapi_graphql/: main.py
src/python_fastapi_graphql/model/: vo.py
tests/: test_python_fastapi_graphql.py
