[tool.poetry]
name = "python-fastapi-graphql"
version = "0.1.0"
description = "basic project by fastapi-graphql"
authors = ["zhanchao.wu <zhanchao.wu@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pydantic = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "*"
pre-commit = "^3.3.3"
commitizen = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",   # pycodestyle error
  "W",   # pycodestyle warning
  "F",   # pyflakes
  "A",   # flakes8-builtins
  "COM", # flakes8-commas
  "C4",  # flake8-comprehensions
  "Q",   # flake8-quotes
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "I",   # isort
  "N",   # pep8 naming
  "UP",  # pyupgrade  
  "S",   # bandit
]

[tool.commitizen]
name = "cz_conventional_commits"

# [[tool.poetry.source]]
# name = "keji"
# url = "https://pypi.mirrors.ustc.edu.cn/simple/"
# default = true
